test_err8.log
python :   File "<string>", line 1
En línea: 1 Carácter: 1
+ python -c "import traceback; import sys; 
sys.path.append('.'); from a ...
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (  
F    ile "<string>", line 1:String) [], 
RemoteExc    eption
    + FullyQualifiedErrorId : NativeCommandError
 
    import traceback; import sys; 
sys.path.append('.'); from app.main import app; 
from fastapi.testclient import TestClient; 
client=TestClient(app); try: 
print(client.post('/auth/register', 
json={'nombre':'A', 'email':'a@a.com', 
'password':'a'}).text) except Exception as e: 
traceback.print_exc()
                                                
                                                
                                                
     ^^^
SyntaxError: invalid syntax
